[Upd] style fixes

--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -15,7 +15,7 @@
   </ol>
 </nav>
 
-<div class="page-header">
+<div class="pb-2 mt-4 mb-2 border-bottom">
   <h1 style=" word-wrap: break-word">
     {{event.title}}
     <a class="btn btn-outline-dark" href="{% url "edit_event" event.id %}">
