--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -37,7 +37,7 @@
   </ol>
 </nav>
 
-<div class="page-header">
+<div class="pb-2 mt-4 mb-2 border-bottom">
   <h1>
     {{project.title}} <small>{{project.short_description}}</small>
     <a class="btn btn-primary" href="{% url "edit_project" project.id %}">
