--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -16,7 +16,7 @@ PAMELA
     </ol>
     </nav>
 
-    <div class="page-header">
+    <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>Pamela
             <small>
                 a Payload for Anti-Matter Exploration and Light-nuclei Astrophysics
