--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -15,7 +15,7 @@ Profil de {{user.username}}
     </ol>
 </nav>
 
-<div class="page-header">
+<div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>
         {{user.username}}
         {% if request.user == user %}
