--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -109,13 +109,13 @@
     {% endfor %}
     </br>
     {% if user != project.maintainer and user not in project.participants.all %}
-      <a href="{% url 'project_add_participation' project.id%}" class="btn btn-info btn-xs">
+      <a href="{% url 'project_add_participation' project.id%}" class="btn btn-info btn-sm">
         <i class="fa fa-child"></i>
         Je veux participer ! </br>
       </a></br>
     {% endif %}
     {% if user in project.participants.all %}
-      <a href="{% url 'project_remove_participation' project.id%}" class="btn btn-default btn-xs">
+      <a href="{% url 'project_remove_participation' project.id%}" class="btn btn-default btn-sm">
         <i class="fa fa-times"></i>
         Ne plus participer</br>
       </a></br>
