[Upd] custom style for small in h1

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@ body {
   margin-bottom: 4em;
 }
 
+h1 small{
+    font-size: 0.7em;color: gray;
+}
+
 .user-avatar {
   width: 1.5em;
   height: 1.5em;
