--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -115,7 +115,7 @@
       </a></br>
     {% endif %}
     {% if user in project.participants.all %}
-      <a href="{% url 'project_remove_participation' project.id%}" class="btn btn-default btn-sm">
+      <a href="{% url 'project_remove_participation' project.id%}" class="btn btn-secondary btn-sm">
         <i class="fa fa-times"></i>
         Ne plus participer</br>
       </a></br>
