[Fix] list_music -> page

--- a/space/templates/motd.html
+++ b/space/templates/motd.html
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for music in list_music %}
+    {% for music in page %}
         <tr>
         <th scope="row">{{music.id}}</th>
         <td><a href={{music.url}}>{{music.url}}</a></td>
