[Upd] points -> compteur d'actions + removed debug print

--- a/badges/templates/badge_detail.html
+++ b/badges/templates/badge_detail.html
@@ -48,7 +48,7 @@
                         Niveau
                     </th>
                     <th class="col-md-1">
-                        Points
+                        Compteur d'actions
                     </th>
                     <th class="col-md-1">
                         attribué le
