[Add] password modification fix

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -134,7 +134,7 @@
                         </svg>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="{% url "password_change" %}">Changer de mot de passe</a>
+                        <a class="dropdown-item" href="{% url "chg_passwd" %}">Changer de mot de passe</a>
                         <a class="dropdown-item" href="{% url "logout" %}?next=/">Déconnexion</a>
                     </div>
                 </li>
