--- a/users/templates/admin/users/change_list.html
+++ b/users/templates/admin/users/change_list.html
@@ -1,7 +1,7 @@
 {% extends "admin/change_list.html" %} {% load i18n %}
 {% block object-tools-items %}
     <li>
-        <a class="btn btn-danger" href="/admin/">
+        <a class="btn btn-danger" href="{% url "debt_mail" %}">
             Envoyer un mail aux gens en dette
         </a>
     </li>
