[FIX] mb on event html & overflow on home_feed

--- a/realtime/templates/home_feed.html
+++ b/realtime/templates/home_feed.html
@@ -12,7 +12,7 @@
       <img src="{{ action.actor.gravatar }}" class="user-avatar">
     </div>
     <div class="col-lg-11">
-      <p>
+      <p style="overflow: hidden;text-overflow: ellipsis;">
         <strong>
           {{ action.actor }} {{ action.verb }}
         </strong>
