--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -120,7 +120,7 @@ Evénements de UrLab
         {% endif %}
         <div class="row">
           {% for event in events %}{% load formatting %}
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-3 mb-2">
             <div class="card">
               <a href="{% url "view_event" event.id %}">
                 {% if not event.picture %}
@@ -144,8 +144,8 @@ Evénements de UrLab
                   {% if request.user != event.organizer and request.user not in event.interested.all %}
                   <a href="{% url "interested_event" event.id %}" class="btn btn-outline-dark" role="button">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-star-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-</svg>
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                    </svg>
                     Participer
                   </a>
                   {% else %}
