Add page for a self-hosted Live Video Stream
Let's provide an option to watch SmartMonday events without Twitch or big corporations.
This adds a new page named 'Direct' (french for Live, suggestions for better names welcome)
that displays a video from an HTTP stream.

The streaming server is currently hosted by my company and requires no authentication.
I am okay with providing this service to UrLaB or to help moving the stream server to
another server (see README.md for more info).

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -105,6 +105,12 @@
                         Badges
                     </a>
                 </li>
+                <li class="nav-item {% active_if_contains "/streams/" %}">
+                    <a class="nav-link" href="{% url "stream-main" %}">
+                        <i class="fas fa-broadcast-tower"></i>
+                        Direct
+                    </a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_authenticated %}
