[Add] proper redirection + confirmation message

--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -12,11 +12,19 @@
                 </div>
             {% endif %}
 
-        {% if request.user.is_authenticated %}
-            <h1>Mon UrLab</h1>
-            <p>Les dernières nouvelles de mon hackerspace préféré.</p>
-            {% include "home_feed.html" %}
-        {% else %}
+            {% if messages %}
+                <ul class="messages mt-5">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
+            {% if request.user.is_authenticated %}
+                <h1>Mon UrLab</h1>
+                <p>Les dernières nouvelles de mon hackerspace préféré.</p>
+                {% include "home_feed.html" %}
+            {% else %}
 
             <h1>
                 UrLab ?</h1>
